--- a/src/content/docs/intro/lsp-intro.mdx
+++ b/src/content/docs/intro/lsp-intro.mdx
@@ -41,6 +41,26 @@ I think pealing back the curtain or looking under the hood can be a great way to
 
 ## Why Go Lang?
 
-Well besides this being a go meetup, I think Go is a great language for this kind of project. It's fast, has a great standard libr/ary, and is easy to learn. Go can also be compiled to a single binary, without long build times or dependencies.
+![Wes Bos twitter node compiled](../../../assets/wes_bos.jpeg)
+
+![Go Lang Hello World](../../../assets/hello-go.png)
+
+### Well as we can see above go langs hello world is a lot smaller than 85.8MB
+
+Wes Bos, a well known web developer, recently tweeted about the size of a simple node project. 
+The compiled size of a simple node project was 85.8MB. This is a lot of overhead for a simple project, and he got a LOT of responses.
+Dev tools should be fast and efficient, and not take up a lot of space. 
+A lot of developer tooling is open source so using a language that can be learned quickly by many is important.
+
+Gos Langs simplicity, speed, and effeciency make it a great choice for many developer tools.
+
+### This is a go Meetup
+
+Kind of a no brainer to use go for this project.
+
+### For real
+
+Go is a great language for this kind of project. It's fast, has a great standard library, and is easy to learn. Go can also be compiled to a single binary, without long build times or dependencies.
+
 
 
