--- a/src/content/docs/implementation/project-setup.mdx
+++ b/src/content/docs/implementation/project-setup.mdx
@@ -2,7 +2,7 @@
 title: Project Setup
 description: Setting up our LSP project.
 ---
-import { FileTree, Code, Aside } from '@astrojs/starlight/components';
+import { FileTree, Code, Aside, Icon } from '@astrojs/starlight/components';
 
 export const mainCodeSetup = `
 package main
@@ -52,6 +52,20 @@ func getLogger(filename *string) *log.Logger {
 <Aside type="danger" title="Heads up!">
     I have only been programming with go lang for a couple months now.
     I focus primarily on C#, SQL, and TS at work, so if there are any mistakes, industry standards, best practices, etc. with go lang that I miss please let me know so I can improve.
+</Aside>
+
+<Aside type="tip" title="Givin' Credit">
+  <p class="inline-block">
+  I got the idea and a lot of the code for this presentation by watching one of TJ DeVries videos on youtube.
+  TJ is huge in the neovim community and has a lot of great content on youtube.
+  Give him a follow on twitter and check out his youtube channel.
+  </p>
+  <a class="inline-block" href="https://x.com/teej_dv"  target="_blank">
+    <Icon name="twitter" size="2rem" />
+  </a>
+  <a class="inline-block px-2" href="https://www.youtube.com/c/tjdevries" target="_blank">
+    <Icon name="youtube" size="2rem"/>
+  </a>
 </Aside>
 
 ## Now for the fun part!
