--- a/src/content/docs/implementation/request-response.mdx
+++ b/src/content/docs/implementation/request-response.mdx
@@ -234,6 +234,10 @@ func handleMessage(msg []byte, logger *log.Logger) {
 Pretty simple we have a handleMessage function that will decode the message and then switch on the method to determine what to do with the message.
 Next for the exciting part of making contact with our editor 👽.
 
+## But which editors are we going to use?
+
+![editor](../../../assets/vim-vs-code.jpg)
+
 <Aside>
     I use and prefer neovim, so I will continue with setting up neovim with our LSP but I have included a VS Code setup as well.
     Neovim allows me to move a bit faster than the VS Code version so I feel it is better for demonstration purposes.
