--- a/src/content/docs/implementation/editor-hookup-neovim.mdx
+++ b/src/content/docs/implementation/editor-hookup-neovim.mdx
@@ -4,18 +4,11 @@ description: Hooking up our LSP to the editor
 ---
 
 Its time to talk to hook up our editor!
-For this rather than use something like lsp-config, I'm going to create an auto command that will hook up our LSP server to our editor
-once a markdown file is opened.
-
+For this rather than use something like lsp-config, I'm just going to call `vim.lsp.start_client` directly.
 ```lua
-vim.api.nvim_create_autocmd("FileType", {
-  pattern = "markdown",
-  callback = function()
-    vim.lsp.start({
-      name = "markdown-awesome-server",
-      cmd = { "/Users/michaelduren/Code/learning/go-meetups/demo-proj/demo_lsp" },
-    })
-  end,
+vim.lsp.start_client({
+  name = "markdown-awesome-server",
+  cmd = { "/Users/michaelduren/Code/learning/go-meetups/demo-proj/demo_lsp" },
 })
 ```
 
