update the handshake

--- a/src/content/docs/implementation/the-handshake.mdx
+++ b/src/content/docs/implementation/the-handshake.mdx
@@ -60,10 +60,7 @@ type InitializeResult struct {
 }
 
 type ServerCapabilities struct {
-	TextDocumentSync   int  `json:"textDocumentSync"`
-	HoverProvider      bool `json:"hoverProvider"`
-	DefinitionProvider bool `json:"definitionProvider"`
-	CodeActionProvider bool `json:"codeActionProvider"`
+    // will be filled in later
 }
 
 type ServerInfo struct {
