--- a/src/content/docs/implementation/hover.mdx
+++ b/src/content/docs/implementation/hover.mdx
@@ -9,6 +9,8 @@ The server should respond with a hover object that contains the hover informatio
 
 ![hover_example](../../../assets/hover-example.png)
 
+## Hover Types
+
 Lets checkout Microsofts **[documentation on the hover method](https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#textDocument_hover).**
 Skip the client capabilities and the response part for now.
 We see that the request `HoverParams` extends two other types `TextDocumentPositionParams` and `WorkDoneProgressParams`.
@@ -73,4 +75,78 @@ func NewInitializeResponse(id int) InitializeResponse {
 	}
 }
 ```
+## Helpers
 
+So with that setup, you can probably guess what the next step is.
+We need to go back to `main.go` to add the method to our switch statement, but first, we need to write a helper function.
+In `state.go` add the following as well as a new `utils` directory with a `is_whitespace.go` file.
+
+```go title="state.go"
+func (s *State) GetWordFromRange(uri string, textDocumentPositionParams lsp.TextDocumentPositionParams) string {
+	doc := s.Documents[uri]
+
+	lines := strings.Split(doc, "\n")
+	currentLine := lines[textDocumentPositionParams.Position.Line]
+
+	selectedWord := ""
+
+	// prepend letter
+	for i := textDocumentPositionParams.Position.Character; i >= 0; i-- {
+		currentByte := currentLine[i]
+		if util.IsWhitespace(currentByte) {
+			break
+		}
+		selectedWord = string(currentByte) + selectedWord
+	}
+
+	// append letters
+	for i := textDocumentPositionParams.Position.Character + 1; i < len(currentLine); i++ {
+		currentByte := currentLine[i]
+
+		if util.IsWhitespace(currentByte) {
+			break
+		}
+
+		selectedWord = selectedWord + string(currentByte)
+	}
+
+	return selectedWord
+}
+```
+
+```go title="utils/is_whitespace.go"
+package util
+
+func IsWhitespace(c byte) bool {
+	return c == ' ' || c == '\t' || c == '\n' || c == '\r'
+}
+```
+## Updating `main.go`
+
+Finally in `main.go` add the following to the switch statement after out `textdocument` method checks.
+```go title="main.go" ins={1-16}
+	case "textDocument/hover":
+		logger.Println("Hover Request")
+		var hoverRequest lsp.HoverRequest
+
+		if err := json.Unmarshal(content, &hoverRequest); err != nil {
+			logger.Printf("Error unmarshalling hover request: %s\n", err)
+			return
+		}
+
+		hoveredWord := state.GetWordFromRange(hoverRequest.Params.TextDocument.Uri, hoverRequest.Params.TextDocumentPositionParams)
+
+		// reply with the word
+		hoverResponse := lsp.NewHoverResponse(*hoverRequest.Id, hoveredWord)
+		writeResponse(hoverResponse, writer, logger)
+	}
+```
+
+## Result
+
+Finally lets rebuild and see it in action!
+
+![hover_example](../../../assets/hover-result.png)
+
+So we have a hover window that shows the word our cursor is on. 
+Not super amazing so far but we're just getting started.
