--- a/src/content/docs/implementation/project-setup.mdx
+++ b/src/content/docs/implementation/project-setup.mdx
@@ -55,17 +55,23 @@ func getLogger(filename *string) *log.Logger {
 </Aside>
 
 <Aside type="tip" title="Givin' Credit">
-  <p class="inline-block">
   I got the idea and a lot of the code for this presentation by watching one of TJ DeVries videos on youtube.
   TJ is huge in the neovim community and has a lot of great content on youtube.
   Give him a follow on twitter and check out his youtube channel.
-  </p>
   <a class="inline-block" href="https://x.com/teej_dv"  target="_blank">
     <Icon name="twitter" size="2rem" />
   </a>
   <a class="inline-block px-2" href="https://www.youtube.com/c/tjdevries" target="_blank">
     <Icon name="youtube" size="2rem"/>
   </a>
+</Aside>
+
+<br/>
+
+<Aside title="Project Code">
+  <div class="text-2xl">
+  [Click Here for the repository for the code we're going to write.](https://github.com/michael-duren/demo_lsp)
+    </div>
 </Aside>
 
 ## Now for the fun part!
